--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
         <a href="#">Olvidé Contraseña</a>
         <a href="#">Inscribirse</a>
       </div>
+      <input type="submit" value="login">
     </div>
   </div>
 
